--- a/Yahtzee/app/src/main/res/layout/activity_main.xml
+++ b/Yahtzee/app/src/main/res/layout/activity_main.xml
@@ -121,17 +121,17 @@
         android:text="@string/app_helper"
         android:textSize="13sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/rollsLeftText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/diceRow2" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/rollsLeftText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Rolls left: 3"
+        android:text="Rolls left: -1"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,6 +155,6 @@
         android:text="Straight (50pts)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/rollsLeftText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
