--- a/BlackJack/app/src/main/res/layout/activity_main.xml
+++ b/BlackJack/app/src/main/res/layout/activity_main.xml
@@ -11,66 +11,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="108dp"
+        android:layout_marginEnd="24dp"
         android:text="Dealer score: 10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/dealerHand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="end"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dealerScore">
-
-        <ImageView
-            android:id="@+id/dealer_card_1"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/c2" />
-
-        <ImageView
-            android:id="@+id/dealer_card_2"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/c2" />
-
-        <ImageView
-            android:id="@+id/dealer_card_3"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:srcCompat="@drawable/c2" />
-
-        <ImageView
-            android:id="@+id/dealer_card_4"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:srcCompat="@drawable/c2" />
-
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dealerScore" />
 
     <TextView
         android:id="@+id/playerScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="72dp"
         android:text="Player score: 10"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,54 +41,16 @@
 
     <LinearLayout
         android:id="@+id/playerHand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="1"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerScore">
-
-        <ImageView
-            android:id="@+id/player_card_1"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/c3" />
-
-        <ImageView
-            android:id="@+id/player_card_2"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/c3" />
-
-        <ImageView
-            android:id="@+id/player_card_3"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:srcCompat="@drawable/c3" />
-
-        <ImageView
-            android:id="@+id/player_card_4"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:srcCompat="@drawable/c3" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/playerScore" />
 
     <Button
         android:id="@+id/hitButton"
