--- a/FamousPeople/app/src/main/res/layout/activity_people_input.xml
+++ b/FamousPeople/app/src/main/res/layout/activity_people_input.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/input_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,12 +23,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:hint="@string/input_name_title"
         android:inputType="textPersonName"
-        android:text="@string/input_name_title"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:ems="10"
         android:hint="@string/input_birthdate_title"
         android:inputType="date"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:ems="10"
         android:hint="@string/input_deathdate_title"
         android:inputType="date"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,9 +74,9 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:hint="@string/input_desc_title"
         android:inputType="textLongMessage"
-        android:text="@string/input_desc_title"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,9 +90,9 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:hint="@string/input_quote_title"
         android:inputType="textShortMessage"
-        android:text="@string/input_quote_title"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,9 +106,9 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:hint="@string/input_quote_title"
         android:inputType="textShortMessage"
-        android:text="@string/input_quote_title"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,9 +122,9 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
         android:ems="10"
+        android:hint="@string/input_quote_title"
         android:inputType="textShortMessage"
-        android:text="@string/input_quote_title"
-        android:textSize="12sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
