Added ability to edit InspiringPerson data.

--- a/FamousPeopleFragments/app/src/main/res/layout/fragment_people_input.xml
+++ b/FamousPeopleFragments/app/src/main/res/layout/fragment_people_input.xml
@@ -144,11 +144,24 @@
             android:id="@+id/inputButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
             android:layout_marginTop="24dp"
             android:text="@string/input_button_save"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/peopleListActivity"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputQuote3" />
+
+        <Button
+            android:id="@+id/peopleListActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="36dp"
+            android:text="@string/input_button_list"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/inputButton"
             app:layout_constraintTop_toBottomOf="@+id/inputQuote3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
