--- a/FamousPeopleFragments/app/src/main/res/layout/person_list_item.xml
+++ b/FamousPeopleFragments/app/src/main/res/layout/person_list_item.xml
@@ -60,4 +60,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/personPhoto"
         app:layout_constraintTop_toBottomOf="@+id/personDates" />
+
+    <TextView
+        android:id="@+id/removeButton"
+        android:layout_width="56dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:text="@string/list_remove_text"
+        android:textAllCaps="true"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
