--- a/WhereamI/app/src/main/res/layout/main_fragment.xml
+++ b/WhereamI/app/src/main/res/layout/main_fragment.xml
@@ -127,7 +127,7 @@
             </LinearLayout>
         </LinearLayout>
 
-        <com.google.android.gms.maps.MapView
+        <!--<com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -135,6 +135,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userInfoLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/userInfoLayout" />-->
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
